# stm32_lvgl

./: .gitignore  README.md
lvgl_simulator/lvgl-v8/: readme.md
lvgl_simulator/lvgl-v8/lvgl_simulator_sdl/: Makefile
lvgl_simulator/lvgl-v8/lvgl_simulator_sdl_cmake/: CMakeLists.txt  Makefile  lv_conf.diff  lv_conf.h  lv_drv_conf.h  monitor_resolution.md
lvgl_simulator/lvgl-v8/lvgl_simulator_sdl_cmake/main/src/: main.c
lvgl_simulator/lvgl-v9/: readme.md
stm32f103/: README.md
stm32f103/lvgl-ll-soft-spi/: BluePill_ILI_lvgl.ioc  Makefile  README.md
stm32f401/lvgl-v9/: readme.md
stm32f401/ssd1963_dma/: readme.md  stm32f401_ssd1963_ugui.ioc
stm32f401/ssd1963_lvgl/: Makefile  lv_conf.h  readme.md  zzzz-sed-touch_lvgl
stm32f401/ssd1963_lvgl-encoder/: stm32f401_ssd1963_lvgl.ioc
stm32f401/ssd1963_lvgl-mouse-encoder/: STM32F401CCUx_FLASH.ld  lv_conf.diff  readme.md  stm32f401_ssd1963_lvgl.ioc
stm32f401/touch-swdio-hal/: sc_openocd.cfg
stm32f401/touch-swdio-ll/: README.md  sc_openocd.cfg
stm32f407/BlackBoard_lvgl-v7/: lv_conf.h  zzzz-sed-touch_lvgl
stm32f407/BlackBoard_lvgl-v8-hall/: BLACK407VE.ioc  Makefile  STM32F407VETx_FLASH.ld  lv_conf.diff  zzzz-sed-touch_lvgl
stm32f407/BlackBoard_lvgl-v8-ll/: BLACK407VE.ioc  Makefile  README.md  lv_conf.h  lv_demo_conf.h  lv_drv_conf.h
stm32f407/LVGL_FSMC-v7/: README.md  STM32F407VETx_FLASH.ld  STM32F407_LVGL_FSMC.ioc  zzzz-sed-touch_lvgl
stm32f407/LVGL_FSMC-v8/: Makefile
stm32f407/tft_hal/: BLACK407VE.ioc  README.md
stm32f407/tft_ll/: BLACK407VE.ioc  Makefile
zz/: update.sh
(+283 files in other folders)
